packages/typ/tests/fixtures/diagnostics/0886_gadt_equality_cast_mismatch_03.ml.infer.expected
File "0886_gadt_equality_cast_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0886_gadt_equality_cast_mismatch_03 is not a valid module name.

File "0886_gadt_equality_cast_mismatch_03.ml", line 7, characters 20-24:
7 |     | Refl_gamma -> true
                        ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
