packages/typ/tests/fixtures/diagnostics/0886_gadt_equality_cast_mismatch_03.ml
type (_, _) eq_gamma =
  | Refl_gamma : ('a, 'a) eq_gamma

let cast_bad_gamma : type a b. (a, b) eq_gamma -> a -> b =
  fun eq x ->
    match eq with
    | Refl_gamma -> true
